Add Update MCServer button to front-end

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,8 @@
             <button id="StartMCServer" class="script-button">Start Minecraft Bedrock Server</button>
             <button id="StopMCServer" class="script-button">TODO Stop Minecraft Bedrock Server</button>
             <button id="StartMCBackup" class="script-button">Start Minecraft Bedrock Server Backup</button>
-        </div>
+            <button id="UpdateMCServer" class="script-button">Update Minecraft Bedrock Server</button>
+        </div>        
         <div class="button-group plex">
             <h2>Plex</h2>
             <button id="StartPlex" class="script-button">Start Plex</button>
